update text content

--- a/collections/_pages/about.html
+++ b/collections/_pages/about.html
@@ -1,16 +1,15 @@
 ---
-title: About
+title: About us
 content_blocks:
   - _bookshop_name: page-heading
-    title: About
+    title: About us
     description:
   - _bookshop_name: page-image
     image: /images/theme.png
     image_alt: My best photo
   - _bookshop_name: content
     content_html: >-
-      <p>Our research group work on practical applications of formal method to Autonomous Driving Systems (ADS). 
-        We aim to propose formal methods and to develop verification tools to ensure the safety and reliability of ADS. The formal methods consist of a formal specification language, a control specification language, and formal verification methods using these languages.</p>
-      <p>Toshiaki Aoki is the leading of the project.</p>
+      <p>Our research group focus on advancing the safety and reliability of next-generation automotive systems, specifically, autonomous driving systems. 
+        Due to the inherent complexity of these systems, rigorous testing and verification are crucial to ensure their safe and reliable operation under various real-world conditions. We specialize in applying formal methods and developing verification tools to address these challenges. By bridging the gap between theoretical approaches and real-world applications, we aim to make autonomous driving safer and more dependable, contributing to the realization of a reliable mobility society.</p>
 ---
 
