--- a/collections/_pages/project.html
+++ b/collections/_pages/project.html
@@ -3,7 +3,7 @@ title: Projects
 content_blocks:
   - _bookshop_name: page-heading
     title: Projects
-    description: We have been and are conducting a number of projects on practical applications of formal methods and verification tools on the safety and reliability of ADS.
+    description: To advance the safety and reliability of autonomous driving systems through formal method, we have undertaken the following research projects.
   - _bookshop_name: posts-list
     show_posts: true
 ---
