--- a/collections/_pages/index.html
+++ b/collections/_pages/index.html
@@ -4,17 +4,18 @@ content_blocks:
   - _bookshop_name: hero
     title: Formal Method and Autonomous Driving
     description_html: >-
-      Our research group work on practical applications of formal method to Autonomous Driving Systems (ADS). 
-      We aim to propose formal methods and to develop verification tools to ensure the safety and reliability of ADS. The formal methods consist of a formal specification language, a control specification language, and formal verification methods using these languages. We propose the verification tools to support them as well. To this end, we have done and are involving several projects list below.
+      Our research group focuses on the practical application of formal methods to next-generation automotive systems, particularly autonomous driving systems. Our goal is to contribute to a safer, more reliable mobility society by setting new standards in the safety verification of these systems. Unlike existing research, which often addresses limited aspects or simplifies target systems, our comprehensive solutions target real-world autonomous systems, aiming to deliver not only robust methodologies but also practical frameworks and verification tools to be used in the autonomous driving sector.
     image: /images/theme.png
     image_alt: Formal Method and Autonomous Driving research
+    cta_button: More about us
+    cta_button_link: "/about"
     works_button: See our projects
     works_button_link: "#projects"
   - _bookshop_name: project-section
     title: Projects
     id: projects
     description_html: >-
-      <p>We have been and are conducting a number of projects on practical applications of formal methods and verification tools on the safety and reliability of ADS.</p>
+      <p>Below are the research projects we have undertaken to advance the safety and reliability of autonomous driving systems.</p>
     link_url: /project
     show_posts: true
 ---
