Update about us

--- a/collections/_pages/about.html
+++ b/collections/_pages/about.html
@@ -9,7 +9,19 @@ content_blocks:
     image_alt: My best photo
   - _bookshop_name: content
     content_html: >-
-      <p>Our research group focus on advancing the safety and reliability of next-generation automotive systems, specifically, autonomous driving systems. 
-        Due to the inherent complexity of these systems, rigorous testing and verification are crucial to ensure their safe and reliable operation under various real-world conditions. We specialize in applying formal methods and developing verification tools to address these challenges. By bridging the gap between theoretical approaches and real-world applications, we aim to make autonomous driving safer and more dependable, contributing to the realization of a reliable mobility society.</p>
+      <p>Our research group focus on advancing the safety and reliability of next-generation automotive systems, with a particular focus on autonomous driving systems (ADSs). The inherent complexity of these systems requires rigorous testing and verification to ensure safe and reliable operation under diverse real-world conditions. We specialize in applying formal methods and developing innovative verification tools to tackle these challenges. By bridging the gap between theoretical research and practical implementation, our work contributes to making autonomous driving technologies safer and more dependable, playing a key role in the creation of a reliable mobility society.</p>
+      <h2>Key Research Area</h2>
+      <p>Our mission is to establish scientifically rigorous methodologies for ensuring the safety and reliability of ADSs. A key aspect of this mission is the development of a formal specification language that enables precise and unambiguous descriptions of system requirements. This language forms the foundation for formal verification methods, which rigorously analyze and validate system behavior against these specifications.
+        To ensure practical application, we design and develop user-friendly verification tools that integrate seamlessly into real-world ADS platforms. These tools support automated analysis and verification processes, making it feasible for industry stakeholders to adopt formal methods in their workflows.
+        
+        </p>
+      </p>
+        Another critical component of our research is leveraging existing safety standards, such as ISO 34502 and others, to comprehensively analyze and verify autonomous driving functions. By aligning our methods with these standards, we not only enhance the reliability of ADS platforms but also ensure compliance with industry best practices and regulations.
+        Unlike existing studies, which often addresses limited aspects or simplifies target systems, our research target real-world autonomous systems, addressing the entire perception-to-control pipeline, covering sensor data processing, decision-making algorithms, and control mechanisms. 
+        
+        </p>
+
+      <h2>Contact us</h2>
+      Email: fmap-contact@ml.jaist.ac.jp
 ---
 
